# comp23hw

PeDuCoML/lib/: Pprintanf.ml  Pprintast.ml  anf.ml  ast.ml  closure_conversion.ml  dune  inferencer.ml  lambda_lift.ml  match_elim.ml  parser.ml  state.ml  typing.ml  util.ml
PeDuCoML/lib/llvm/: llvm_comp.ml
PeDuCoML/lib/middleend/: anf.ml  anf.mli  closure_conversion.ml  lambda_lift.ml  match_elim.ml  state.ml
PeDuCoML/lib/parsing/: ast.ml  ast.mli  parser.ml  parser.mli  util.mli
PeDuCoML/lib/pretty_printers/: Pprintanf.ml  Pprintanf.mli  Pprintast.mli  Pprintcf.mli
PeDuCoML/lib/typing/: inferencer.ml  typing.ml  typing.mli
PeDuCoML/runtime/: runtime.c
PeDuCoML/test/: anf.t  anf_test.ml  closure.t  closure_test.ml  defunc_test.ml  defunc_test.t  dune  inferencer.t  test.ml
PeDuCoML/test/anf/: anf.t  anf_test.ml
PeDuCoML/test/defunc/: closure.t  closure_test.ml  defunc_test.ml  defunc_test.t
PeDuCoML/test/inferencer/: inferencer_test.ml
PeDuCoML/test/llvm/: llvm_test.t
