(library
 (modules
  Ast
  Parser
  Pprintast
  Inferencer
  Typing
  Util
  Anf
  Pprintanf
  Closure_conversion
  Lambda_lift
  Llvm_comp)
 (libraries angstrom llvm)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (name PeDuCoML)
 (public_name PeDuCoML.Lib))
