(executable
 (name anf_test)
 (modules anf_test)
 (libraries PeDuCoML.Lib stdio))

(cram
 (deps ./anf_test.exe))

(executable
 (name inferencer_test)
 (modules inferencer_test)
 (libraries PeDuCoML.Lib stdio))

(cram
 (deps ./inferencer_test.exe))

(executable
 (name closure_test)
 (modules closure_test)
 (libraries PeDuCoML.Lib stdio))

(cram
 (deps ./closure_test.exe))

(executable
 (name defunc_test)
 (modules defunc_test)
 (libraries PeDuCoML.Lib stdio))

(cram
 (deps ./defunc_test.exe))
